# MNIST-Server

./: .gitignore  main.py  pyproject.toml
.github/actions/setup-python-env/: action.yml
.github/workflows/: cicd.yaml  demo.yaml
backend/: pyproject.toml
model/: README.md  main.py  mnist_model.py  pyproject.toml
model/config/: __init__.py  base.py  local.py
model/tests/: test_main.py
model/tests/test_config/: test_base.py
