[project]
name = "model"
version = "0.1.0"
description = "PyTorch based model for evaluating MNIST-like images."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.2",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.11",
]
